# copper

./: .buildinfo  .gitignore  Acknowledgement.html  Additional Examples.html  Applications.html  Chillers.html  Code Documentation.html  Contributing.html  Equipment.html  Introduction.html  LICENSE.md  License.html  MANIFEST.in  Methodology.html  Quickstart Guide.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.circleci/: config.yml
.doctrees/: Acknowledgement.doctree  Additional Examples.doctree  Applications.doctree  Chillers.doctree  Code Documentation.doctree  Contributing.doctree  Equipment.doctree  Introduction.doctree  License.doctree  Methodology.doctree  Quickstart Guide.doctree  environment.pickle  index.doctree
_modules/: index.html
_sources/: Additional Examples.rst.txt  Code Documentation.rst.txt  Equipment.rst.txt  Methodology.rst.txt  Quickstart Guide.rst.txt  index.rst.txt
copper/: __init__.py  calculations.py  chiller.py  cli.py  constants.py  copper.py  curves.py  equipment.py  ga.py  generator.py  helpers.py  i_o_process.py  library.py  pkg_dx.py  read_instruction_set.py  schema.py  unitary_dx.py  unitarydirectexpansion.py  units.py
data/: curves.csv
docs/: Makefile  make.bat  paper.bib  paper.md
fixtures/: chiller_curves.csv  chiller_curves.json  reformchiller_curves.json  test.json  typical_curves.json
lib/: chiller_curves.json
schema/: copper.chiller.action.schema.json  copper.chiller.generate_set_of_curves.schema.json
(+133 files in other folders)
